--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <h4>店舗情報</h4>
                             <address>
                                 〒810-0014<br>
-                                福岡市平尾2丁目8-13&nbsp;&nbsp;Style A floral studio
+                                福岡市〇〇〇〇&nbsp;&nbsp;Style A floral studio
                             </address>
                         </div>
                         <div class="contact-item">
@@ -145,11 +145,11 @@
                         <div class="contact-item">
                             <h4>アクセス</h4>
                             <p>
-                                西鉄「平尾駅」徒歩3分<br><br>
+                                西鉄「〇駅」徒歩〇分<br><br>
                             </p>
                             <div class="map-container">
                                 <iframe 
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.8964445524675!2d130.39063931521425!3d33.56862998073587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x354191c4b5c5c4d1%3A0x1234567890abcdef!2z44CSODEwLTAwMTQg56aP5bKh55yM56aP5bKh5biC5bmz5bC-77yS5LiB55uu77yY4oiS77yR77yT!5e0!3m2!1sja!2sjp!4v1644000000000!5m2!1sja!2sjp"
+                                    src="https://maps.app.goo.gl/no9TkDSSgYdBmZ4c6"
                                     width="100%" 
                                     height="300" 
                                     style="border:0;" 
